examples/test/testpolicy6350.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6350
  namespace: namespace163
spec:
  podSelector:
    matchLabels:
      key49: value32
      key9: value16
      key37: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value12
      podSelector:
        matchLabels:
          key46: value15
